--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="ru.sberbank.homework3">
 
+
+    <uses-permission android:name="ru.sberbank.SEND_MESSAGES_PERMISSION" />
+    <permission android:name="ru.sberbank.SEND_MESSAGES_PERMISSION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +23,8 @@
             </intent-filter>
         </activity>
         <service android:name=".MyIntentService" />
+
+
     </application>
 
 </manifest>
